monapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monapp-deployment
  namespace: packapp08
spec:
  selector:
    matchLabels:
      app: monapp
  replicas: 2
  template:
    metadata:
      labels:
        app: monapp
    spec:
      containers:
      - name: monapp
        image: registry.hackathon-container.com/packapp08/monapp:1.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry
