advisorservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: advisorservice-svc
  namespace: packapp08
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 1010
    targetPort: 8080
    protocol: TCP
  selector:
    app: advisorservice
