backrp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backrp-svc
  namespace: packapp08
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 1003
    targetPort: 1000
    protocol: TCP
  selector:
    app: backrp
