monapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monapp-svc
  namespace: packapp08
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: monapp
