resources-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resources-svc
  namespace: packapp08
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 1001
    targetPort: 1000
    protocol: TCP
  selector:
    app: resources
