advisor-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: advisor
  namespace: packapp08
spec:
  rules:
  - host: advisor08.hackathon-container.com
    http:
      paths:
      - backend:
          serviceName: advisor-svc
          servicePort: 1000
  tls:
  - hosts:
    - advisor08.hackathon-container.com
